--- a/css/less/widget-bootstrap.less
+++ b/css/less/widget-bootstrap.less
@@ -57,5 +57,5 @@
 
 // Utility classes
 @import "bootstrap/utilities.less";
-// @import "bootstrap/responsive-utilities.less";
+@import "bootstrap/responsive-utilities.less";
 
