--- a/css/less/widget.less
+++ b/css/less/widget.less
@@ -9,13 +9,20 @@
 
 // Core variables and mixins
 @import "bootstrap/variables.less";
-// @import "bootstrap/mixins.less";
+@import "bootstrap/mixins.less";
 
 .ltcw {
 	display: block;
 	font-family: @font-family-base;
 	font-size: @font-size-base;
 	@import (less) url('../widget-bootstrap.css');
+
+	.visible-on-hover {
+		.opacity(0);
+		&:hover {
+			.opacity(1);
+		}
+	}
 
 	.visible-contents-on-hover {
 		> * {
