--- a/css/less/site.less
+++ b/css/less/site.less
@@ -1,3 +1,23 @@
 body {
 	padding-top:50px;
 }
+
+.code-mono {
+	font-family: "Lucida Console", Monaco, monospace;
+}
+
+.code-sm {
+	font-size: 0.7em;
+}
+
+@keyframes example {
+	10% {background-color: #dddddd;}
+	50% {background-color: #ddeedd;}
+	100% {background-color: #dddddd;}
+}
+
+.code-change.ng-animate {
+	animation-name: example;
+	animation-duration: 1s;
+	animation-iteration-count: 2;
+}
