Fixed placeholder issue in IE9

--- a/css/less/widget.less
+++ b/css/less/widget.less
@@ -18,6 +18,8 @@
 	@import (less) url('../widget-bootstrap.css');
 	@import 'captcha.less';
 
+	.placeholder-text { color: @input-color-placeholder; }
+
 	.visible-on-hover {
 		.opacity(0);
 		&:hover {
