--- a/css/site.css
+++ b/css/site.css
@@ -12,7 +12,7 @@ body {
     background-color: #dddddd;
   }
   50% {
-    background-color: #ddeedd;
+    background-color: #ddffdd;
   }
   100% {
     background-color: #dddddd;
@@ -23,7 +23,7 @@ body {
     background-color: #dddddd;
   }
   50% {
-    background-color: #ddeedd;
+    background-color: #ddffdd;
   }
   100% {
     background-color: #dddddd;
@@ -32,8 +32,29 @@ body {
 .code-change.ng-animate {
   -webkit-animation-name: example;
           animation-name: example;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  -webkit-animation-duration: 0.3s;
+          animation-duration: 0.3s;
   -webkit-animation-iteration-count: 2;
           animation-iteration-count: 2;
+}
+.ltw-tool-form-update {
+  position: absolute;
+  top: -5px;
+  right: 0;
+}
+.ltw-builder-tools {
+  position: relative;
+}
+.ltw-builder-tools .ltw-tool-form-update {
+  opacity: 0.3;
+}
+.ltw-builder-tools:hover .ltw-tool-form-update {
+  opacity: 1;
+}
+.ltw-builder-tools .btn.btn-tool {
+  border-radius: 4px;
+}
+.ltw-builder-tools .btn.btn-tool.btn-sm,
+.ltw-builder-tools .btn.btn-tool.btn-xs {
+  border-radius: 3px;
 }
