--- a/css/less/widget.less
+++ b/css/less/widget.less
@@ -11,7 +11,7 @@
 @import 'bootstrap/variables.less';
 @import 'bootstrap/mixins.less';
 
-.ltcw {
+.ltw {
 	display: block;
 	font-family: @font-family-base;
 	font-size: @font-size-base;
