added paragraph field

--- a/css/less/site.less
+++ b/css/less/site.less
@@ -29,7 +29,7 @@ body {
 .ltw-tool-form-update { position: absolute; top: -5px; right: 0;}
 .ltw-builder-tools {
 	position: relative;
-	.ltw-tool-form-update { opacity: 0.3; }
+	.ltw-tool-form-update { opacity: 0.3; z-index: 2; }
 	&:hover .ltw-tool-form-update { opacity: 1; }
 	.btn {
 		&.btn-tool {
