--- a/css/less/widget-bootstrap.less
+++ b/css/less/widget-bootstrap.less
@@ -12,6 +12,8 @@
 @import "bootstrap/variables.less";
 @import "bootstrap/mixins.less";
 
+@icon-font-path: "/fonts/";
+
 // Reset and dependencies
 @import "bootstrap/normalize.less";
 // @import "bootstrap/print.less";
