--- a/css/less/site.less
+++ b/css/less/site.less
@@ -26,17 +26,25 @@ body {
 	animation-iteration-count: 2;
 }
 
-.ltw-tool-form-update { position: absolute; top: -5px; right: 0;}
 .ltw-builder-tools {
 	position: relative;
-	.ltw-tool-form-update { opacity: 0.3; z-index: 2; }
+	.ltw-tool-form-update { position: absolute; top: -5px; left: 0; opacity: 0.3; z-index: 2; width:100%; height: 0px; }
 	&:hover .ltw-tool-form-update { opacity: 1; }
+
 	.btn {
 		&.btn-tool {
 			border-radius: @btn-border-radius-base;
 			&.btn-sm, &.btn-xs { border-radius: @btn-border-radius-small; }
 		}
 	}
+
+	.edit-tool-right { float: right; margin-left: 5px; }
+}
+
+.ltw-builder-tools-field {
+	position: relative;
+	.ltw-tool-field-update { position: absolute; top: -5px; left: 0; opacity: 0.3; z-index: 2; width: 100%; height: 0px; }
+	&:hover .ltw-tool-field-update { opacity: 1; }
 }
 
 .show-on-active-inline-block {
