--- a/css/less/site.less
+++ b/css/less/site.less
@@ -31,6 +31,15 @@ body {
 	.ltw-tool-form-update { position: absolute; top: -5px; left: 0; opacity: 0.3; z-index: 2; width:100%; height: 0px; }
 	&:hover .ltw-tool-form-update { opacity: 1; }
 
+	.ltw-builder-tools-field {
+		position: relative;
+		.ltw-tool-field-update { position: absolute; top: -5px; left: 0; opacity: 0; z-index: 2; width: 100%; height: 0px; }
+	}
+	&:hover .ltw-builder-tools-field {
+		.ltw-tool-field-update { opacity: 0.3; }
+		&:hover .ltw-tool-field-update { opacity: 1; }
+	}
+
 	.btn {
 		&.btn-tool {
 			border-radius: @btn-border-radius-base;
@@ -41,11 +50,6 @@ body {
 	.edit-tool-right { float: right; margin-left: 5px; }
 }
 
-.ltw-builder-tools-field {
-	position: relative;
-	.ltw-tool-field-update { position: absolute; top: -5px; left: 0; opacity: 0.3; z-index: 2; width: 100%; height: 0px; }
-	&:hover .ltw-tool-field-update { opacity: 1; }
-}
 
 .show-on-active-inline-block {
 	display: none;
