--- a/css/site.css
+++ b/css/site.css
@@ -48,9 +48,26 @@ body {
   z-index: 2;
   width: 100%;
   height: 0px;
-  /* right: 0; */
 }
 .ltw-builder-tools:hover .ltw-tool-form-update {
+  opacity: 1;
+}
+.ltw-builder-tools .ltw-builder-tools-field {
+  position: relative;
+}
+.ltw-builder-tools .ltw-builder-tools-field .ltw-tool-field-update {
+  position: absolute;
+  top: -5px;
+  left: 0;
+  opacity: 0;
+  z-index: 2;
+  width: 100%;
+  height: 0px;
+}
+.ltw-builder-tools:hover .ltw-builder-tools-field .ltw-tool-field-update {
+  opacity: 0.3;
+}
+.ltw-builder-tools:hover .ltw-builder-tools-field:hover .ltw-tool-field-update {
   opacity: 1;
 }
 .ltw-builder-tools .btn.btn-tool {
@@ -63,21 +80,6 @@ body {
 .ltw-builder-tools .edit-tool-right {
   float: right;
   margin-left: 5px;
-}
-.ltw-builder-tools-field {
-  position: relative;
-}
-.ltw-builder-tools-field .ltw-tool-field-update {
-  position: absolute;
-  top: -5px;
-  left: 0;
-  opacity: 0.3;
-  z-index: 2;
-  width: 100%;
-  height: 0px;
-}
-.ltw-builder-tools-field:hover .ltw-tool-field-update {
-  opacity: 1;
 }
 .show-on-active-inline-block {
   display: none;
