hiding parts of editField modal.

--- a/css/less/captcha.less
+++ b/css/less/captcha.less
@@ -2,12 +2,14 @@
 
 
 @captcha-max-width: 330px;
+@captcha-min-width: 240px;
 @captcha-height: 60px;
 @captcha-img-max-width: @captcha-max-width - 30px;
 @captcha-font-size: 36px;
 
 .lt-captcha {
 	max-width: @captcha-max-width;
+	min-width: @captcha-min-width;
 
 	.captcha-font {
 		text-align: center;
