--- a/css/less/site.less
+++ b/css/less/site.less
@@ -66,3 +66,15 @@ input {
 		border-color: @state-danger-text;
 	}
 }
+
+.resize {
+	&-none {
+		resize: none;
+	}
+	&-vertical {
+		resize: vertical;
+	}
+	&-horizontal {
+		resize: horizontal;
+	}
+}
