Available fields updated so unique fields can only be added once.

--- a/css/less/widget.less
+++ b/css/less/widget.less
@@ -37,4 +37,16 @@
 			}
 		}
 	}
+
+	.resize {
+		&-none {
+			resize: none;
+		}
+		&-vertical {
+			resize: vertical;
+		}
+		&-horizontal {
+			resize: horizontal;
+		}
+	}
 }
