--- a/css/less/site.less
+++ b/css/less/site.less
@@ -33,7 +33,7 @@ body {
 
 	.ltw-builder-tools-field {
 		position: relative;
-		.ltw-tool-field-update { position: absolute; top: -5px; left: 0; opacity: 0; z-index: 2; width: 100%; height: 0px; }
+		.ltw-tool-field-update { position: absolute; top: -5px; left: 0; opacity: 0; z-index: 2; width: 100%; height: 0px; padding-left: 10px; }
 	}
 	&:hover .ltw-builder-tools-field {
 		.ltw-tool-field-update { opacity: 0.3; }
@@ -47,9 +47,13 @@ body {
 		}
 	}
 
-	.edit-tool-right { float: right; margin-left: 5px; }
+	// .edit-tool-left { float: left; margin-right: 5px; }
+	// .edit-tool-right { float: right; margin-left: 5px; }
 }
 
+// .pull-right {
+// 	&.pull-right-pad { margin-left: 5px; }
+// }
 
 .show-on-active-inline-block {
 	display: none;
