--- a/css/site.css
+++ b/css/site.css
@@ -63,6 +63,7 @@ body {
   z-index: 2;
   width: 100%;
   height: 0px;
+  padding-left: 10px;
 }
 .ltw-builder-tools:hover .ltw-builder-tools-field .ltw-tool-field-update {
   opacity: 0.3;
@@ -76,10 +77,6 @@ body {
 .ltw-builder-tools .btn.btn-tool.btn-sm,
 .ltw-builder-tools .btn.btn-tool.btn-xs {
   border-radius: 3px;
-}
-.ltw-builder-tools .edit-tool-right {
-  float: right;
-  margin-left: 5px;
 }
 .show-on-active-inline-block {
   display: none;
