--- a/css/less/site.less
+++ b/css/less/site.less
@@ -28,23 +28,67 @@ body {
 
 .ltw-builder-tools {
 	position: relative;
-	.ltw-tool-form-update { position: absolute; top: -5px; left: 0; opacity: 0.3; z-index: 2; width:100%; height: 0px; }
-	&:hover .ltw-tool-form-update { opacity: 1; }
+	.ltw-tool-form-update {
+		position: absolute;
+		top: -5px;
+		left: 0;
+		z-index: 4;
+		width:100%;
+		height: 0;
+		.opacity(0.3);
+	}
+	&:hover .ltw-tool-form-update {
+		.opacity(1);
+	}
 
 	.ltw-builder-tools-field {
 		position: relative;
-		.ltw-tool-field-update { position: absolute; top: -5px; left: 0; opacity: 0; z-index: 2; width: 100%; height: 0px; padding-left: 10px; }
+		.ltw-tool-field-update {
+			position: absolute;
+			top: -5px;
+			left: 0;
+			.opacity(0);
+			z-index: 2;
+			width: 100%;
+			height: 0;
+			padding-left: 10px;
+		}
 	}
 	&:hover .ltw-builder-tools-field {
-		.ltw-tool-field-update { opacity: 0.3; }
-		&:hover .ltw-tool-field-update { opacity: 1; }
+		.ltw-tool-field-update {
+			.opacity(0.3);
+		}
+		&:hover .ltw-tool-field-update {
+			.opacity(1);
+		}
 	}
 
 	.btn {
 		&.btn-tool {
 			border-radius: @btn-border-radius-base;
-			&.btn-sm, &.btn-xs { border-radius: @btn-border-radius-small; }
+			&.btn-sm, &.btn-xs {
+				border-radius: @btn-border-radius-small;
+			}
 		}
+	}
+
+	.move-hover {
+		position: absolute;
+		left: 0;
+		bottom: -14px;
+		background-color: #aaaaaa;
+		width: 100%;
+		height: 16px;
+		z-index: 8;
+		.opacity(0.8);
+		display: none;
+	}
+
+	.on-drag-hover {
+		.move-hover {
+			display: block;
+		}
+
 	}
 
 	// .edit-tool-left { float: left; margin-right: 5px; }
