--- a/css/site.css
+++ b/css/site.css
@@ -44,13 +44,15 @@ body {
   position: absolute;
   top: -5px;
   left: 0;
-  opacity: 0.3;
-  z-index: 2;
+  z-index: 4;
   width: 100%;
-  height: 0px;
+  height: 0;
+  opacity: 0.3;
+  filter: alpha(opacity=30);
 }
 .ltw-builder-tools:hover .ltw-tool-form-update {
   opacity: 1;
+  filter: alpha(opacity=100);
 }
 .ltw-builder-tools .ltw-builder-tools-field {
   position: relative;
@@ -60,16 +62,19 @@ body {
   top: -5px;
   left: 0;
   opacity: 0;
+  filter: alpha(opacity=0);
   z-index: 2;
   width: 100%;
-  height: 0px;
+  height: 0;
   padding-left: 10px;
 }
 .ltw-builder-tools:hover .ltw-builder-tools-field .ltw-tool-field-update {
   opacity: 0.3;
+  filter: alpha(opacity=30);
 }
 .ltw-builder-tools:hover .ltw-builder-tools-field:hover .ltw-tool-field-update {
   opacity: 1;
+  filter: alpha(opacity=100);
 }
 .ltw-builder-tools .btn.btn-tool {
   border-radius: 4px;
@@ -77,6 +82,21 @@ body {
 .ltw-builder-tools .btn.btn-tool.btn-sm,
 .ltw-builder-tools .btn.btn-tool.btn-xs {
   border-radius: 3px;
+}
+.ltw-builder-tools .move-hover {
+  position: absolute;
+  left: 0;
+  bottom: -14px;
+  background-color: #aaaaaa;
+  width: 100%;
+  height: 16px;
+  z-index: 8;
+  opacity: 0.8;
+  filter: alpha(opacity=80);
+  display: none;
+}
+.ltw-builder-tools .on-drag-hover .move-hover {
+  display: block;
 }
 .show-on-active-inline-block {
   display: none;
