--- a/css/site.css
+++ b/css/site.css
@@ -39,6 +39,65 @@ body {
 }
 .ltw-builder-tools {
   position: relative;
+  /* .move-between-cells {
+		position: absolute;
+		top: 0;
+		right: -15px;
+		height: 100%;
+		width: 30px;
+		background-color: @move-hover-color;
+		// .opacity(0.2);
+		// z-index: 1;
+		// display: none;
+	}
+
+	.move-between-rows-wrapper {
+		position: relative;
+		height: @form-group-margin-bottom + 10px;
+		display: block;
+		background-color: #dda;
+		margin: -(@form-group-margin-bottom + 5) 0 -5px 0;
+		.opacity(0.8);
+		z-index: 10;
+		padding-top: floor((@form-group-margin-bottom + 10px)/2);
+
+		.move-between-rows {
+			background-color: #000;
+			height: 1px;
+			// position: absolute;
+			// width: 100%;
+			// top: -15px;
+			// height: 15px;
+			// background-color: #add;
+			// z-index: 10;
+			// .opacity(0.5);
+		}
+
+		&:hover {
+			background-color: #CCC;
+			height: @form-group-margin-bottom + 20px;
+			margin: -(@form-group-margin-bottom + 5) 0 -5px 0;
+			.move-between-rows {
+				background-color: #000;
+				height: 10px;
+				border-radius: 4px;
+			}
+
+			// height: 15px;
+			// margin-bottom: 5px;
+			// .move-between-rows {
+			// 	height: 35px;
+			// }
+		}
+	}
+
+	.on-drag-active {
+		&.move-between-cells {
+			.opacity(0.5);
+			z-index: 10;
+			// display: block;
+		}
+	} */
 }
 .ltw-builder-tools .ltw-tool-form-update {
   position: absolute;
@@ -75,6 +134,7 @@ body {
 .ltw-builder-tools:hover .ltw-builder-tools-field:hover .ltw-tool-field-update {
   opacity: 1;
   filter: alpha(opacity=100);
+  z-index: 10;
 }
 .ltw-builder-tools .btn.btn-tool {
   border-radius: 4px;
@@ -83,20 +143,58 @@ body {
 .ltw-builder-tools .btn.btn-tool.btn-xs {
   border-radius: 3px;
 }
+.ltw-builder-tools .ltw-builder-tools-multi-cell-row {
+  /* .move-hover::before {
+			content: ' ';
+			background-color: green;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			margin-top: -4px;
+			padding: 24px;
+		} */
+}
 .ltw-builder-tools .move-hover {
   position: absolute;
   left: 0;
-  bottom: -14px;
-  background-color: #aaaaaa;
+  top: 0;
   width: 100%;
-  height: 16px;
+  height: 100%;
   z-index: 8;
-  opacity: 0.8;
-  filter: alpha(opacity=80);
+  opacity: 0.5;
+  filter: alpha(opacity=50);
   display: none;
+}
+.ltw-builder-tools .move-hover::before {
+  content: ' ';
+  background-color: #888888;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -4px;
+  border-radius: 4px 4px 0 0;
+}
+.ltw-builder-tools .move-hover::after {
+  content: ' ';
+  background-color: #888888;
+  width: 100%;
+  height: 8px;
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  margin-top: -4px;
+  border-radius: 0 0 4px 4px;
 }
 .ltw-builder-tools .on-drag-hover .move-hover {
   display: block;
+}
+.ltw-builder-tools .on-drag-hover.move-between-cells {
+  opacity: 0.8;
+  filter: alpha(opacity=80);
 }
 .show-on-active-inline-block {
   display: none;
