--- a/css/less/site.less
+++ b/css/less/site.less
@@ -17,14 +17,14 @@ body {
 	font-size: 0.7em;
 }
 
-@keyframes example {
+@keyframes codechange {
 	10% {background-color: #dddddd;}
 	50% {background-color: #ddffdd;}
 	100% {background-color: #dddddd;}
 }
 
 .code-change.ng-animate {
-	animation-name: example;
+	animation-name: codechange;
 	animation-duration: 1s;
 	animation-iteration-count: 2;
 }
@@ -238,5 +238,50 @@ input {
 	}
 	&-horizontal {
 		resize: horizontal;
+	}
+}
+
+.lt-spinner {
+	width: 100px;
+	height: 100px;
+	animation: spinner 1s linear infinite;
+	img {
+		width: 100%;
+	}
+}
+
+@keyframes spinner {
+	from { transform: rotate(0deg); }
+	to { transform: rotate(360deg); }
+}
+
+.modal-header {
+	&.alert {
+		margin-bottom:0;
+		.border-bottom-radius(0);
+	}
+}
+
+.modal-processing {
+	padding: 20px 10px;
+	margin-bottom:100px;
+	background-color: #FFFFFF;
+	border: 2px solid #000000;
+	h3 {
+		margin: 5px 0;
+		font-size: @font-size-h4
+	}
+	img {
+		width: 64px;
+		padding-right:20px;
+	}
+}
+
+@media (min-width: @screen-sm-min) {
+	.modal-processing {
+		padding: 40px;
+		h3 {
+			font-size: @font-size-h3;
+		}
 	}
 }
