Papa Parse test

--- a/css/less/site.less
+++ b/css/less/site.less
@@ -229,6 +229,10 @@ input {
 	}
 }
 
+.pre-code {
+	white-space: pre-wrap;
+}
+
 .resize {
 	&-none {
 		resize: none;
@@ -284,4 +288,13 @@ input {
 			font-size: @font-size-h3;
 		}
 	}
+}
+
+
+/////////////
+// Angular //
+/////////////
+
+.ng-hide {
+	display: none;
 }
