--- a/css/site.css
+++ b/css/site.css
@@ -206,6 +206,9 @@ body {
 input.ng-invalid.ng-dirty {
   border-color: #a94442;
 }
+.pre-code {
+  white-space: pre-wrap;
+}
 .resize-none {
   resize: none;
 }
@@ -270,4 +273,7 @@ input.ng-invalid.ng-dirty {
   .modal-processing h3 {
     font-size: 24px;
   }
+}
+.ng-hide {
+  display: none;
 }
