including more features from bootstrap library in widget.css

--- a/Areas/Widgets/Content/widget-bootstrap.less
+++ b/Areas/Widgets/Content/widget-bootstrap.less
@@ -31,14 +31,14 @@ body {
 @import "../../../Content/less/bootstrap/buttons.less";
 
 // Components
-// @import "../../../Content/less/bootstrap/component-animations.less";
+@import "../../../Content/less/bootstrap/component-animations.less";
 // @import "../../../Content/less/bootstrap/dropdowns.less";
-// @import "../../../Content/less/bootstrap/button-groups.less";
+@import "../../../Content/less/bootstrap/button-groups.less";
 // @import "../../../Content/less/bootstrap/input-groups.less";
 // @import "../../../Content/less/bootstrap/navs.less";
 // @import "../../../Content/less/bootstrap/navbar.less";
 // @import "../../../Content/less/bootstrap/breadcrumbs.less";
-// @import "../../../Content/less/bootstrap/pagination.less";
+@import "../../../Content/less/bootstrap/pagination.less";
 // @import "../../../Content/less/bootstrap/pager.less";
 // @import "../../../Content/less/bootstrap/labels.less";
 // @import "../../../Content/less/bootstrap/badges.less";
@@ -50,7 +50,7 @@ body {
 // @import "../../../Content/less/bootstrap/list-group.less";
 @import "../../../Content/less/bootstrap/panels.less";
 // @import "../../../Content/less/bootstrap/responsive-embed.less";
-// @import "../../../Content/less/bootstrap/wells.less";
+@import "../../../Content/less/bootstrap/wells.less";
 // @import "../../../Content/less/bootstrap/close.less";
 
 // Components w/ JavaScript
