--- a/Areas/Widgets/Content/site.less
+++ b/Areas/Widgets/Content/site.less
@@ -26,9 +26,10 @@
 
 .ltw-builder-tools {
 	position: relative;
+	margin-bottom:50px;
 	.ltw-tool-form-update {
 		position: absolute;
-		top: -5px;
+		top: -30px;
 		left: 0;
 		z-index: 4;
 		width:100%;
