--- a/Areas/Widgets/Content/site.less
+++ b/Areas/Widgets/Content/site.less
@@ -26,7 +26,7 @@
 
 .ltw-builder-tools {
 	position: relative;
-	margin-bottom:50px;
+	margin-top:50px;
 	.ltw-tool-form-update {
 		position: absolute;
 		top: -30px;
@@ -122,6 +122,11 @@
 	//.edit-tool-right { float: right; margin-left: 5px; }
 }
 
+.ltw-preview {
+	.lt-widget-border {
+		padding: 8px;
+	}
+}
 
 .show-on-active-inline-block {
 	display: none;
