updated from TFS

--- a/Areas/Widgets/Content/site.less
+++ b/Areas/Widgets/Content/site.less
@@ -188,3 +188,11 @@ input {
 		}
 	}
 }*/
+
+/* ADDED BY ERIC @ 8/26/16 resize the h1 and h2 titles */
+h1 {
+    font-size:26px;
+}
+h2 { 
+    font-size:20px;
+}
