--- a/Content/Site.less
+++ b/Content/Site.less
@@ -206,3 +206,10 @@ textarea {
 	}
 	.transition(all ease-in-out 0.2s);
 }
+
+/////////////
+// Footer //
+/////////////
+footer {
+	text-align: center;
+}
