--- a/Content/Site.less
+++ b/Content/Site.less
@@ -4,7 +4,7 @@
 @spinner-color: #ffffff;
 
 body {
-	padding-top: 75px;
+	padding-top:0;
 	padding-bottom: 20px;
 }
 
@@ -28,12 +28,17 @@ textarea {
 	max-width: 280px;
 }*/
 
+.navbar .UserName {
+    font-size:140%;
+    font-family: 'Courgette', cursive;
+}
 
 //////////////////////
 // custom bootstrap //
 //////////////////////
 .navbar {
 	min-height:75px;
+    border-radius:0 !important;
 }
 /*.panel-heading {
 	cursor:pointer;
