--- a/Content/lt-site.less
+++ b/Content/lt-site.less
@@ -36,7 +36,8 @@ html.html-footer-sticky {
 .footer {
 	height: @footer-height;
 	border-top: 1px solid #eee;
-	padding-top: 1em;
+	padding-top: 0.8em;
+	font-size: 0.8em;
 }
 
 .footer-inverse {
@@ -271,5 +272,11 @@ html.html-footer-sticky {
 				}
 			}
 		}
+	}
+
+	// Footer
+	.footer {
+		padding-top: 1em;
+		font-size: 1em;
 	}
 }
