--- a/Content/lt-site.less
+++ b/Content/lt-site.less
@@ -120,6 +120,9 @@ html.html-footer-sticky {
 .dropdown {
 	.dropdown-menu {
 		.box-shadow(@box-shadow);
+		> li > a {
+			padding: 8px 20px;
+		}
 	}
 
 	&.dropdown-bubble {
@@ -138,7 +141,7 @@ html.html-footer-sticky {
 
 			> li {
 				> a {
-					padding: 3px 20px;
+					padding: 8px 20px;
 				}
 			}
 
