--- a/Content/lt-site.css
+++ b/Content/lt-site.css
@@ -72,6 +72,9 @@ html.html-footer-sticky body .footer-sticky {
 .dropdown .dropdown-menu {
   box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
 }
+.dropdown .dropdown-menu > li > a {
+  padding: 8px 20px;
+}
 .dropdown.dropdown-bubble .dropdown-menu {
   position: absolute;
   float: left;
@@ -82,7 +85,7 @@ html.html-footer-sticky body .footer-sticky {
   box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
 }
 .dropdown.dropdown-bubble .dropdown-menu > li > a {
-  padding: 3px 20px;
+  padding: 8px 20px;
 }
 .dropdown.dropdown-bubble .dropdown-menu:before,
 .dropdown.dropdown-bubble .dropdown-menu:after {
